# SpectrumId

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  spectrumId.cpp
core/: CMakeLists.txt
core/root/spectrum/: CMakeLists.txt
core/spectrum/: CMakeLists.txt
core/spectrum/inc/: Background.h  MetaData.h  Peak.h  Spectrum.h  Utilities.h  Window.h
core/spectrum/src/: Spectrum.cxx  Utilities.cxx  Window.cxx
inc/: Background.h  DataWorker.h  MetaData.h  Peak.h  Spectrum.h
main/: CMakeLists.txt  spectrumId.cpp
notebooks/: spectrumId.ipynb  theor.ipynb
scripts/: Background.C  DataGen.C  Peaks.C  Smoothing.C  workFlow.C  workflow.C
src/: DataWorker.cxx  Spectrum.cxx
test/: CMakeLists.txt  Test.cxx  UtilitiesTest.cxx  WindowTest.cxx
tests/: DataWorkerTest.C  SpectrumTest.C
